--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <!-- Navbar Start -->
-     <div class="navigasi">
-        <div class="logo">
-            <h2>My Portfolio</h2>
+    <title>MY Portfolio</title>
+    <link rel ="stylesheet" href="style.css">
+ </head>
+ <body>
+    <!--Navbar Start-->
+    <div class="navigasi">
+    <div class="loho">
+        <h2>My Portfolio</h2>
         </div>
         <div class="menu">
             <ul>
@@ -18,37 +18,18 @@
                 <li><a href="#">Pendidikan</a></li>
                 <li><a href="#">Softskill</a></li>
                 <li><a href="#">Kontak</a></li>
-
             </ul>
         </div>
-     </div>
-    <!-- Navbar End -->
-     <!-- hero section start -->
-      <div class="banner">
-        <img src="gambar/women.png" alt="">
-        <h1>Hai Nama Saya Agata Gemoi </h1>
-        <p>Salam Hangat Dari Saya Dan Semoga Kamu Sehat Selalu</button></p>
-        </div>
-    <!-- hero section end-->
-<!--education start-->
-<div class="box-pendidikan">
-<h1>Riwayat Pendidikan</h1>
-<div class="box-kiri">
-    <img src="gambar/icon-sd.png" alt="">
-    <p><h3>Sekolah Dasar</h3></p>
-    <p>Saya Bersekolah Dasar Di SD</p>
+    </div>
+<!--Navbar End-->
+<!--Hero Section Start-->
+<div class="banner">
+    <img src="gambar/Olivia-Rodrigo.jpg" alt="">
+    <h1>Hai Nama Saya Amalia</h1>
+    <p>Salam Hangat Dari Saya dan Semoga Kamu Sehat Selalu</p>
+
+    <a href=""><button>Selengkapnya</button></a>
 </div>
-<div class="box-tengah">
-    <img src="gambar/icon-smp.png" alt="">
-    <p><h3>Sekolah Menengah Pertama</h3></p>
-    <p>Saya Bersekolah SMP BCI</p>
-</div>
-<div class="box-kanan">
-    <img src="gambar/icon-sma.png" alt="">
-    <p><h3>Sekolah Menengah Atas</h3></p>
-    <p>Saya Bersekolah SMA BCI</p>
-</div>
-</div>        
-<!--education end-->
+<!--Hero SEction End-->
 </body>
-</html>
+ </html>
